--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+@import 'https://fonts.googleapis.com/icon?family=Material+Icons';
+ .mat-button-focus-overlay { 
+     background-color: transparent; }
+body{
+    margin:0px!important;
+}
